[package]
name = "rust-experiment"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.18.0"
hex = "0.4.3"
eip-712 = { git = "https://github.com/Holo-Host/EIP-712", branch = "master" }
serde_json = "1.0"
